--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="86b7cc">  <td>20/05/22 16:57:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@2e377400]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1760126453</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/05/22 16:58:09</td>   <td>12113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageLabel()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@2e377400]">verifyContactsPageLabel</td> 
-  <td>main@1760126453</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/05/22 16:58:09</td>   <td>12213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@2e377400]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1760126453</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/05/22 16:58:10</td>   <td>13203</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@2e377400]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1760126453</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/05/22 16:58:21</td>   <td>23742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.SelectContactsTest()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@2e377400]">SelectContactsTest</td> 
-  <td>main@1760126453</td>   <td></td> </tr>
-<tr bgcolor="86b7cc">  <td>20/05/22 16:58:21</td>   <td>23825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@2e377400]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1760126453</td>   <td></td> </tr>
+<tr bgcolor="736069">  <td>20/07/12 16:09:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4a883b15]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="736069">  <td>20/07/12 16:09:45</td>   <td>7135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4a883b15]">loginTest</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="736069">  <td>20/07/12 16:09:57</td>   <td>19188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@4a883b15]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
 </table>
